js/src/tests/test262/language/import/import-defer/errors/get-other-while-evaluating/dep_FIXTURE.js
import
defer
*
as
main
from
"
.
/
main
.
js
"
;
try
{
main
.
foo
;
}
catch
(
error
)
{
globalThis
[
"
error
on
main
.
foo
"
]
=
error
;
}
